fix: accettable dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,8 @@
     --popover-foreground: 0 0% 3.9%;
     --primary: 356 78% 42%;
     --primary-foreground: 0 0% 98%;
+    --primary-modal: 356 78% 42%;
+    --primary--modal-foreground: 0 0% 98%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
     --muted: 0 0% 96.1%;
@@ -40,6 +42,8 @@
     --popover-foreground: 0 0% 98%;
     --primary: 0 0% 98%;
     --primary-foreground: 0 0% 9%;
+    --primary-modal: 356 78% 42%;
+    --primary-modal-foreground: 0 0% 0%;
     --secondary: 0 0% 14.9%;
     --secondary-foreground: 0 0% 98%;
     --muted: 0 0% 14.9%;
